# fred

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
backend/: .dockerignore  .env.sample  Dockerfile  Makefile  PROTOCOL.md  README.md  pyproject.toml
backend/config/: .env.template  configuration.yaml
backend/dockerfiles/: Dockerfile-dev  Dockerfile-prod
backend/fred/: application_context.py  flow.py  main.py  main_utils.py  model_factory.py
backend/fred/chatbot/: agent_manager.py  chatbot_controller.py
backend/fred/common/: error.py  structure.py  utils.py
backend/fred/config/: .env.template  context_store_local_settings.py  context_store_minio_settings.py  feedback_store_local_settings.py  feedback_store_opensearch_settings.py  minio_settings.py
backend/fred/context/: context_controller.py  context_service.py  context_storage_settings.py
backend/fred/feedback/: feedback_controller.py  feedback_service.py
backend/fred/leader/: leader.py
backend/fred/monitoring/: MONITORING.md  hybrid_metric_store.py  hybride_metric_store.py  inmemory_metric_store.py  llm_monitoring.py  logging_context.py  metadata.py  metric_store.py  metric_store_controller.py  metric_types.py  metric_util.py  monitored_language_model.py  monitoring_api.py  monitoring_wrapper.py  open_search_exporter.py  smart_monitoring_wrapper.py
backend/fred/security/: keycloak.py
backend/fred/tests/: test_chatbot_controller.py  test_context_integration.py  test_context_service.py  test_translate_response_metadata.py
backend/resources/: configuration.yaml
deploy/: README.md  (+1 more)
(+461 files in other folders)
